Changed API: URL -> URI, renaming DisplayImageOptions.showImageForEmptyUrl() -> .showImageForEmptyUri() ImageDownloader uses URIs instead of URLs